# game-engine

./: .gitignore  CMakeLists.txt
main/: character_class.cpp  main  main.cpp  menu.cpp
main/Class/: Character.cpp  Character.h  Player.cpp  Player.h
main/Engine/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h
main/UI/: menu.cpp  menu.h  ui_style.cpp  ui_style.h
